cmake_minimum_required(VERSION 3.26)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(tm994 tm994.cpp)
add_executable(tm208 tm208.cpp)
add_executable(tm741 tm741.cpp)
add_executable(tm1463 tm1463.cpp)

add_executable(tm22 tm22.cpp)
add_executable(tm79 tm79.cpp)
add_executable(tm72 tm72.cpp)
add_executable(tm647 tm647.cpp)
add_executable(tm647j2 tm647j2.cpp)
add_executable(tm5 tm5.cpp)
add_executable(tm152 tm152.cpp)
add_executable(tm64 tm64.cpp)
add_executable(tm399 tm399.cpp)
add_executable(tm166 tm166.cpp)
add_executable(tm88 tm88.cpp)
add_executable(tm75 tm75.cpp)
add_executable(tm75j2 tm75j2.cpp)
add_executable(tm75j3 tm75j3.cpp)
